--- a/apps/music-converter/src/index.html
+++ b/apps/music-converter/src/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
     <meta name="theme-color" content="#fff" />
-    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
+    <!--    <meta name="apple-mobile-web-app-capable" content="yes">-->
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
   </head>
   <body>
