--- a/apps/music-converter/src/index.html
+++ b/apps/music-converter/src/index.html
@@ -8,6 +8,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <!--    <meta name="apple-mobile-web-app-capable" content="yes">-->
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta http-equiv="Content-Security-Policy" content="img-src 'self' http://p3.music.126.net http://p4.music.126.net;" />
   </head>
   <body>
     <div id="root"></div>
